# ball_tracking

./: pyproject.toml
configs/: football_ball.yaml
scripts/: convert_soccernetgs_to_yolo.py  train_yolo.py
