[project]
name = "football-ball-training"
version = "0.1.0"
description = "Train a football ball detector from SoccerNetGS-style annotations"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ultralytics>=8.3.0",
    "opencv-python-headless>=4.10.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
    "Pillow>=10.0.0",
]

[tool.uv]
dev-dependencies = []